# Open-Dnn

./: LICENSE  README.md
acc_runtime/aws_acc/: README.md
acc_runtime/aws_acc/api_lib/inc/: acc_ctrl.h
acc_runtime/aws_acc/runtime/: Makefile  acc_ctrl.cpp  acc_ctrl.h  test_dram_dma.c
acc_runtime/local_acc/: README.md
acc_runtime/local_acc/api_lib/: CMakeCache.txt  Makefile
examples/AlexNet/: acc_ins_params.txt  net_config_params.txt
fpga_cnn/src/: acc_instance.h  activation_functions.h  config.h  construct_net.h  conv_acc_2ibuf.h  conv_acc_innerpp.h  data_type.h  fc_acc_conv.h  fc_acc_innerpp.h  ff_test.cpp  image_converter.h  max_pool_acc_innerpp.h  pow_function.h  resize_image.h
fpga_cnn/testbench/: conv_validate.cpp  conv_validate.h  fc_validate.cpp  fc_validate.h  pooling_validate.cpp  pooling_validate.h  print_array.h
netGenerator/: README.md  clean.sh  run_generator.sh
netGenerator/dse/: global_search.py  helping_functions.py  local_search.py  model_extract.py  model_partition.py  model_split.py  net_config_params.txt  param_write.py  task_analysis.py  tm_tn_multiAcc.py
netGenerator/netGen/: acc_ins_param.txt  generate_accInst.py  generate_consNet.py  generate_conv.py
netGenerator/paramExtractor/: extract.py
scripts/hls_impl/: hls_script.tcl  syn.sh
scripts/sys_gen/aws_impl/: build_system_aws.tcl
scripts/sys_gen/local_impl/: build_system_local.tcl
software/aws_acc/: README.md
software/local_acc/api_lib/: CMakeLists.txt  cmake_install.cmake
software/local_acc/demos/conv_layer/: CMakeLists.txt  acc_config.h  cmake_install.cmake
(+37 files in other folders)
